syntax = "proto3";
package kratos.api;

option go_package = "base/conf;conf";

message TlsService {
  string server_crt = 1;
  string server_key = 2;
  string rootCA = 3;
}